--- a/report.html
+++ b/report.html
@@ -190,9 +190,6 @@ conversion of desert areas into residential and industrial zones.</p>
 <ul>
 <li><strong>Baseline</strong>: Satellite imagery of 6th of October City
 from October 2015.</li>
-</ul>
-<!-- -->
-<ul>
 <li><strong>Comparison</strong>: Satellite imagery of the same area from
 October 2025.</li>
 </ul>
@@ -206,7 +203,7 @@ Libraries</h3>
 library(imageRy) # Image classification 
 library(ggplot2) # Data visualization</code></pre>
 <h3 id="set-working-directory">Set working directory</h3>
-<pre><code>setwd(&quot;~/Desktop/r-project/&quot;)</code></pre>
+<pre><code>setwd(&quot;~/Desktop/r-project/exam/&quot;)</code></pre>
 <h3 id="data-import-visual-inspection">Data Import &amp; Visual
 Inspection</h3>
 <pre><code>m2015 &lt;- rast(&quot;oct_2015.jpg&quot;)
@@ -230,12 +227,6 @@ m2025c &lt;- im.classify(m2025, num_clusters=2)
 par(mfrow=c(1,2))
 plot(m2015c, main=&quot;Classes in 2015&quot;)
 plot(m2025c, main=&quot;Classes in 2025&quot;)</code></pre>
-<blockquote>
-<p><strong>Note:</strong> A standardization function
-(<code>standardize_map</code>) was used to ensure consistency across
-years (e.g., ensuring Class 1 always represents Desert) to allow for
-accurate change detection.</p>
-</blockquote>
 <p><img src="3fec142c-28f8-43c3-bb80-9a2dd60e4660.png" /> <img
 src="cfc7182a-3b3b-47e4-a3ef-96a5dcb29ecb.png" /></p>
 <h1 id="statistical-analysis-of-growth">Statistical Analysis of
@@ -296,7 +287,31 @@ ggplot(data, aes(x=Year, y=Percentage, fill=Class)) +
 <p>By subtracting the 2015 classified map from the 2025 map, we can
 pinpoint the exact locations where desert was converted into urban
 land.</p>
-<pre><code># Calculating the difference
+<pre><code># Function to make classes consistent: 
+# It ensures Class 1 is always the majority (Desert) and Class 2 is Urban
+standardize_map &lt;- function(classified_img) {
+  freqs &lt;- freq(classified_img)
+  # Find which value (1 or 2) is the majority
+  majority_val &lt;- freqs[which.max(freqs$count), &quot;value&quot;]
+  
+  # If the majority is value 2, we swap 1 and 2
+  if(majority_val == 2) {
+    r_new &lt;- classified_img
+    r_new[classified_img == 1] &lt;- 20 # Temporary value
+    r_new[classified_img == 2] &lt;- 10 # Switch 2 to 10
+    
+    r_final &lt;- r_new
+    r_final[r_new == 10] &lt;- 1 # Set Desert to 1
+    r_final[r_new == 20] &lt;- 2 # Set Urban to 2
+    return(r_final)
+  } else {
+    return(classified_img) # Already correct
+  }
+}</code></pre>
+<pre><code>m2015_fixed &lt;- standardize_map(m2015c)
+m2025_fixed &lt;- standardize_map(m2025c)
+
+# Calculating the difference
 change_map &lt;- m2025_fixed - m2015_fixed
 
 # Plotting the Change Detection Map
@@ -315,8 +330,9 @@ legend(&quot;topright&quot;,
 (Growth).</p></li>
 <li><p><strong>Light Gray:</strong> Represents areas with no significant
 land cover change.</p></li>
-<li><p><strong>Red:</strong> Represents loss of urban area ,changing
-this area,or classification noise.</p></li>
+<li><p><strong>Red:</strong> Red pixels may indicate conversion from
+urban to non-urban, but in practice they often reflect misclassification
+or local changes in surface reflectance between dates.</p></li>
 </ul>
 <h1 id="conclusion">Conclusion</h1>
 <p>The analysis demonstrates a significant urban sprawl in 6th of
@@ -335,11 +351,8 @@ Bologna.</p></li>
 <li><p><strong>R Core Team (2026).</strong> <em>R: A Language and
 Environment for Statistical Computing</em>. R Foundation for Statistical
 Computing, Vienna, Austria.</p></li>
-</ul>
-<!-- -->
-<ul>
-<li><strong>Wickham, H. (2016).</strong> <em>ggplot2: Elegant Graphics
-for Data Analysis</em>. Springer-Verlag New York.</li>
+<li><p><strong>Wickham, H. (2016).</strong> <em>ggplot2: Elegant
+Graphics for Data Analysis</em>. Springer-Verlag New York.</p></li>
 </ul>
 </body>
 </html>
