--- a/report.html
+++ b/report.html
@@ -175,7 +175,7 @@
 <h1
 id="monitoring-urban-expansion-in-6th-of-october-city-2015---2025">Monitoring
 Urban Expansion in 6th of October City (2015 - 2025)</h1>
-<h2 id="exam-for-spatial-ecology-in-r">Exam for spatial Ecology in
+<h2 id="exam-for-spatial-ecology-in-r">Exam for Spatial Ecology in
 R</h2>
 <h4 id="supervisor-prof.-duccio-rocchini"><strong>Supervisor:</strong>
 Prof. Duccio Rocchini</h4>
@@ -213,8 +213,7 @@ m2025 &lt;- rast(&quot;oct_2025.jpg&quot;)
 par(mfrow=c(1,2))
 plot(m2015, main=&quot;6th of October - 2015&quot;)
 plot(m2025, main=&quot;6th of October - 2025&quot;)</code></pre>
-<p><img src="181b797b-d85f-4e16-bd9f-ef57b48aeec3.png"
-width="699" /></p>
+<p><img src="181b797b-d85f-4e16-bd9f-ef57b48aeec3.png" /></p>
 <h1 id="land-cover-classification">Land Cover Classification</h1>
 <p>We applied an <strong>Unsupervised Classification</strong> algorithm
 to categorize the images into two main clusters: <strong>Desert</strong>
